*Empty MediaWiki Message*

--- a/Nzémbo_(búku).mw
+++ b/Nzémbo_(búku).mw
@@ -2,9 +2,9 @@
 {{KimokristoS}}
 [[Image:Psałterz florianski1.jpg|left|thumb|250px|Page d'un ancien Psaltère de Florence (Italie) (Nzembo 1).]]
 
-Na monoko ya [[ligresi]] babengaka '''banzembo''' óyo Ψαλμοί (=psalmoi; [[hebreu]]: תהילים =tehilim; [[falansé]]: psaume). [[Yésu|Yezu]] ayembaki banzemo óyo. Azalaki kosalela yango po nakopesa mateya, to po na losambo na ye moko. Bantoma pe bazalaki kosala ndenge moko.
+Na monoko ya [[ligresi]] babengaka '''banzembo''' óyo Ψαλμοί (=psalmoi; תהילים =tehilim na lokótá [[hebreu]]; psaume na lokótá [[falansé]]). 
 
-Yango wana banzembo etikalá tii lelo esika biso [[bakrísto]] tokoki kokuta maloba ya kokoka óyo tokoki kozwa po nakosolola na [[Nzámbe]]. 
+[[Yésu|Yezu]] ayembaki banzemo óyo. Azalaki kosalela yango po nakopesa mateya, to po na losambo na ye moko. Bantoma pe bazalaki kosala ndenge moko. Yango wana banzembo etikalá tii lelo esika biso [[bakrísto]] tokoki kokuta maloba ya kokoka óyo tokoki kozwa po nakosolola na [[Nzámbe]]. 
 
 ==Tála mpé==
 ===Wikipedia===
