--- a/Nzémbo_(búku).mw
+++ b/Nzémbo_(búku).mw
@@ -4,7 +4,7 @@
 
 Na monoko ya [[ligresi]] babengaka '''banzembo''' óyo Ψαλμοί (=psalmoi; תהילים =tehilim na lokótá [[hebreu]]; psaume na lokótá [[falansé]]). 
 
-[[Yésu|Yezu]] ayembaki banzemo óyo. Azalaki kosalela yango po nakopesa mateya, to po na losambo na ye moko. Bantoma pe bazalaki kosala ndenge moko. Yango wana banzembo etikalá tii lelo esika biso [[bakrísto]] tokoki kokuta maloba ya kokoka óyo tokoki kozwa po nakosolola na [[Nzámbe]]. 
+[[Yesu]] ayembaki banzemo óyo. Azalaki kosalela yango po nakopesa mateya, to po na losambo na ye moko. Bantoma pe bazalaki kosala ndenge moko. Yango wana banzembo etikalá tii lelo esika biso [[bakrísto]] tokoki kokuta maloba ya kokoka óyo tokoki kozwa po nakosolola na [[Nzámbe]]. 
 
 ==Tála mpé==
 ===Wikipedia===
