typo Yesu Bɛtɛlɛmɛ (www.bibelarchiv-vegelahn.de/Fremdsprachen/Lingala-04.jpg)

--- a/Yésu.mw
+++ b/Yésu.mw
@@ -1,7 +1,7 @@
 {{KimokristoS}}
-[[image:Christus Ravenna.jpg|thumb|left|Yésu Kristo (6e s.), Mosaik na San Apollinare Nuovo, [[Ravenna]]]]
+[[image:Christus Ravenna.jpg|thumb|left|Yesu Kristo (6e s.), Mosaik na San Apollinare Nuovo, [[Ravenna]] (Italie)]]
 
-'''Yésu''' (mpé ''Yésu Kristo'', *7 ou 4 na [[Betelemi]], † 30, 31 ou 33 na [[Yerusalémi]]) azali te bobele moto monene ya kala, oyo azalaki na bomoi mpe akufaki kala. Maloba ya [[Nzambe]] eyebisi ye azali Nzambe Mosali na biloko nyonso.
+'''Yesu''' (mpé ''Yesu Kristo'' mpé ''Yesu Masiya'', *7 ou 4 na [[Bɛtɛlɛmɛ]], † 30, 31 ou 33 na [[Yerusalémi]]) azali te bobele moto monene ya kala, oyo azalaki na bomoi mpe akufaki kala. Maloba ya [[Nzámbe]] eyebisi ye azali Nzámbe Mosali na biloko nyonso.
 
 {{ndámbo}}
 
