--- a/Lazariste.mw
+++ b/Lazariste.mw
@@ -2,10 +2,10 @@
 
 '''Congrégation de la Mission (Lazariste)''' ebandi o mobu 1625 o engumba [[Pari]]. Kasi ut'o ebandela, mosala mwa lingomba lina moyebanaki mpe o bikolo bisusu.
 
-Lingomba ya Mission lisangisi ba nganga-[[Nzambe]] na mpe ba mofulele. Bango batangemi ba ''Religieux'' te, ata ko bakosalaka bilako. Likanisi ya Mosantu [[Vincent wa Paul]] lizalaki 'te akoka kobongisa lingomba lyoko na ntina ya kozala mpe kosala mosala lisanga na bato banso ba mokili. Engebene na mibeko mya Eklezya, bakotanga lyango "société de vie apostolique".
+Lingomba ya Mission lisangisi ba nganga-[[Nzámbe]] na mpe ba mofulele. Bango batangemi ba ''Religieux'' te, ata ko bakosalaka bilako. Likanisi ya Mosantu [[Vincent wa Paul]] lizalaki 'te akoka kobongisa lingomba lyoko na ntina ya kozala mpe kosala mosala lisanga na bato banso ba mokili. Engebene na mibeko mya Eklezya, bakotanga lyango "société de vie apostolique".
 
 == Ntina ya lingomba ==
-Lingomba lya Mission lizali kosangela nsango elamu na babola, na nguya ya elimo ya [[Yésu|Yésu Kristu]]. Mosala mokotinda ba Lazariste bazala na bizaleli biye :
+Lingomba lya Mission lizali kosangela nsango elamu na babola, na nguya ya elimo ya [[Yesu|Yesu Kristu]]. Mosala mokotinda ba Lazariste bazala na bizaleli biye :
 
 * Kolinga kosala liboso mpenza kati ya babola : bosangeli Nsango Elamu na babola, yango nde elembo'te bokonzi bwa likolo bokomi penepene (cf. Mt 11,5) ;
 * Kozala mpe na bokebi na makambo ma mokili, mingi mpenza koluka koyeba ntina ya bokeseni mpe bozangi bosembo o bokaboli nkita na kati ya mokili. wana nde kosala mosala mwa profeta o bosangeli Nsango Elamu;
@@ -24,7 +24,7 @@ O mobu 1998, lingomba ya Mission lizalaki na ba membre 4193. O kati ya bango.
 |Baepiskopo bazali
 |29
 |-
-|Banganga-Nzambe
+|Banganga-Nzámbe
 |3191
 |-
 |Ba mofulele
