*Empty MediaWiki Message*

--- a/Boklísto.mw
+++ b/Boklísto.mw
@@ -1,7 +1,7 @@
 {{ndámbo}}
 {{KimokristoS}}
 
-'''Boklísto''' (tǒ '''bokrísto''', mpé na [[lifalansé]] balobi ''[[:fr:Christianisme|christianisme]]'') ezalí relizion ya balandi [[Yésu]] ya [[Nazaleti]]. Relizion óyo ezwí nkómbo na yango, na nkómbo ya moyángeli na yango ya liboso - Yésu - óyo ayébaní mpé na nkómbo ya ''mobikisi'', to mpe ''Kristo'' na [[ligresi]] (lokótá la [[Gresi]]).  Boklísto ezalí mpé relizion mɔ̌kɔ́ o kati ya barelijion mísató ya [[balandi nzámbe mɔ́kɔ́]] (boklísto, [[islamu]] na [[boyúda]]). Lokola o kati ya barelijion basúsu bábalé, [[bakristo]] basambelaka nzámbe óyo bato-mayɛ́lɛ babengi '''Nzámbe ya Abalamu''' (''Abraham'').
+'''Boklísto''' (tǒ '''bokrísto''', mpé na [[lifalansé]] balobi ''[[:fr:Christianisme|christianisme]]'') ezalí relizion ya balandi [[Yesu]] ya [[Nazaleti]]. Relizion óyo ezwí nkómbo na yango, na nkómbo ya moyángeli na yango ya liboso - Yésu - óyo ayébaní mpé na nkómbo ya ''mobikisi'', to mpe ''Kristo'' na [[ligresi]] (lokótá la [[Gresi]]).  Boklísto ezalí mpé relizion mɔ̌kɔ́ o kati ya barelijion mísató ya [[balandi nzámbe mɔ́kɔ́]] (boklísto, [[islamu]] na [[boyúda]]). Lokola o kati ya barelijion basúsu bábalé, [[bakristo]] basambelaka nzámbe óyo bato-mayɛ́lɛ babengi '''Nzámbe ya Abalamu''' (''Abraham'').
 
 [[fr:Christianisme]][[en:Christianity]]
 
