--- a/London_Borough_of_Barking_and_Dagenham.mw
+++ b/London_Borough_of_Barking_and_Dagenham.mw
@@ -14,3 +14,5 @@ Ba masanga yasika ewutu ko salama na kati ya oyo ezalaka mpe toza na 3500  a 500
 
 [[Category:Bakomini ya Londoni]]
 [[Category:Ingɛlɛ́tɛlɛ]]
+
+[[en:London Borough of Barking and Dagenham]]
