*Empty MediaWiki Message*

--- a/Brazzaville.mw
+++ b/Brazzaville.mw
@@ -1,4 +1,4 @@
-'''Brazzaville''' ezalí mbóka-mokonzi ya Kɔngɔ́-Brazzaville.
+'''Brazzaville''' ezalí [[mbóka-mokonzi]] ya [[Kɔ́ngɔ-Brazzaville]].
 
 [[Category:Mbóka-mokonzi]]
 [[Category:Kɔ́ngɔ-Brazzaville]]
