--- a/Kikɔ́ngɔ.mw
+++ b/Kikɔ́ngɔ.mw
@@ -8,6 +8,7 @@
 === Nkásá o libándá ===
 * http://www.congopage.com/phpBB/viewforum.php?f=33
 * http://www.ceeba.at/#Etudes%20Linguistiques Institut de culture africaine de Bandundu (lifalansé)
+* http://www.nekongo.org/akongo/ babuku kikɔ́ngɔ PDF (lifalansé)
 {{ndambo}}
 
 [[Category:Lokótá]]
