--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -332,7 +332,7 @@ __NOTOC__
 {| border=&quot;1&quot; cellpadding=&quot;5&quot;
 |width=&quot;240&quot;| [[Pakistan]] || [[Image:Pakarms22.PNG|120px]]
 |-
-| [[Palau]] ||[http://www.bdarop.com/images/Officials/Executive/execseal.gif] This is the Exectutive<br> Seal, but is close in form<br> to the National Arms.
+| [[Palau]] ||
 |-
 | [[Panama]] || [[Image:Escudo_armas_Panama.PNG|120px|Panama COA]]
 |-
@@ -340,7 +340,7 @@ __NOTOC__
 |-
 | [[Paraguay]] || [[Image:Paraguay_coa.png|120px]]
 |-
-| [[Peru]] || [[Image:Coa_Peru.jpg|120px]]
+| [[Peru]] || [[Image:escudo nacional del Perú.svg|120px]]
 |-
 | [[Philippines]] || [[Image:Philippine_coat-of-arms.png|120px]]
 |-
