--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -87,7 +87,7 @@ __NOTOC__
 |-
 | [[Croatia]] || [[Image:Croatian Coat of Arms.svg|120px]]
 |-
-| [[Cuba]] || [[Image:Cuba_coa.png|120px]]
+| [[Cuba]] || [[Image:Cuba_coa.gif|120px]]
 |-
 | [[Cyprus]] || [[Image:Cyprus_Coat_of_Arms.png|120px]]
 |-
