*Empty MediaWiki Message*

--- a/Monɔkɔ.mw
+++ b/Monɔkɔ.mw
@@ -1,1 +1,2 @@
-soki
+[[Image:Sagittalmouth.png|thumb|Monɔkɔ ya moto]]
+'''Monɔkɔ''' ezalí eténi ya [[elongi]] eye ebandí o [[mbébo]] kín’o [[mongóngó]], leka [[lǐno|mǐno]] mpé [[lolému]].
