--- a/Monɔkɔ.mw
+++ b/Monɔkɔ.mw
@@ -1,2 +1,26 @@
 [[Image:Sagittalmouth.png|thumb|Monɔkɔ ya moto]]
 '''Monɔkɔ''' ezalí eténi ya [[elongi]] eye ebandí o [[mbébo]] kín’o [[mongóngó]], leka [[lǐno|mǐno]] mpé [[lolému]].
+
+[[da:Mund]]
+[[de:Mund]]
+[[el:Στόμα]]
+[[en:Mouth]]
+[[eo:Buŝo]]
+[[es:Cavidad oral]]
+[[fi:Suu]]
+[[fr:Bouche]]
+[[he:פה]]
+[[it:Bocca (anatomia)]]
+[[ja:口]]
+[[ko:입]]
+[[lt:Burna]]
+[[mk:Усна празнина]]
+[[nl:Mond]]
+[[pl:Jama ustna]]
+[[pt:Boca]]
+[[simple:Mouth]]
+[[sk:Ústna dutina]]
+[[sl:Usta]]
+[[su:Baham]]
+[[sv:Mun]]
+[[zh-min-nan:Chhùi-khiuⁿ]]
