--- a/Monɔkɔ.mw
+++ b/Monɔkɔ.mw
@@ -1,6 +1,8 @@
 [[Image:Sagittalmouth.png|thumb|Monɔkɔ ya moto]]
 '''Monɔkɔ''' ezalí eténi ya [[elongi]] eye ebandí o [[mbébo]] kín’o [[mongóngó]], leka [[lǐno|mǐno]] mpé [[lolému]].
 
+{{ndámbo}}
+[[Category:Eténi ya nzóto]]
 [[da:Mund]]
 [[de:Mund]]
 [[el:Στόμα]]
