--- a/Monɔkɔ.mw
+++ b/Monɔkɔ.mw
@@ -1,4 +1,5 @@
-[[Image:Sagittalmouth.png|thumb|Monɔkɔ ya moto]]
+[[Image:Sagittalmouth.png|thumb|Monɔkɔ ya [[moto]]]]
+[[Image:Yawning Cat.jpg|thumb|Monɔkɔ ya [[nyáo]]]]
 '''Monɔkɔ''' ezalí eténi ya [[elongi]] eye ebandí o [[mbébo]] kín’o [[mongóngó]], leka [[lǐno|mǐno]] mpé [[lolému]].
 
 {{ndámbo}}
