*Empty MediaWiki Message*

--- a/Mbɛbú.mw
+++ b/Mbɛbú.mw
@@ -3,5 +3,18 @@
 
 {{ndámbo}}
 [[Category:Eténi ya nzóto]]
-[[fr:Lèvre]]
+[[de:Lippe]]
 [[en:Lip]]
+[[eo:Lipo]]
+[[es:Labio]]
+[[fi:Huulet]]
+[[fr:Lèvre]]
+[[he:שפתיים]]
+[[it:Labbro]]
+[[ja:唇]]
+[[nl:Lip]]
+[[nn:Hn/Lippa]]
+[[pl:Wargi]]
+[[pt:Lábio]]
+[[ru:Губы]]
+[[sv:Läpp]]
