--- a/Biblíya.mw
+++ b/Biblíya.mw
@@ -37,10 +37,10 @@
 
 ==Tála mpé==
 ===Babúku===
-*Biblíya  	ISBN 0966843302  	 	  	
+*Biblíya  	ISBN 9966-843-30-2 ABU 	 	  	
 *Biblíya        ISBN 9966-40-879-7 ABRDC-ABU, 2004
 *Mokanda na Kondimana na Sika na nkolo na biso Yesu Masiya - Njembo     ISBN 9966-40-110-5 SBRDC-ABU, 2000
-*Mokanda na Kondimana na Sika na nkolo na biso Yesu Masiya - Njembo 	ISBN 9966-40-112-1 	
+*Mokanda na Kondimana na Sika na nkolo na biso Yesu Masiya - Njembo 	ISBN 9966-40-112-1
 
 ===Nkásá o libándá===
 *Bulletin Dei Verbum, BDV 50, p.22 http://www.c-b-f.org/start.php?CONTID=08_01_02_03_01_03_00&LANG=en (lingɛlɛsi)
