--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -387,7 +387,7 @@ __NOTOC__
 |-
 | [[Scotland]] || [[Image:Scottish royal coat of arms.png|120px]] 
 |-
-| [[Sénégal]] || [[Image:Senegal_coa.png|120px]]
+| [[Sénégal]] || [[Image:Coat of arms of Senegal.png|120px]]
 |-
 | [[Serbia and Montenegro]] || [[Image:Coat of arms of Serbia and Montenegro.png|120px|Serbia and Montenegro Caot of Arms]]
 |-
