*Empty MediaWiki Message*

--- a/Falansia.mw
+++ b/Falansia.mw
@@ -31,8 +31,8 @@ BOTIBO_BOZIBI_limati=ya 0|
 BOTIBO_BOZIBI_moto_na_moto 	= 000|
 BOTIBO_BOZIBI_moto_na_moto_limati=ya 000|
 sovereignty_type 	=[[dipanda]] |
-established_events 	= - [[**Traité de Verdun]]|
-established_dates 	= <br/>- 843 |
+established_events 	= - [[**Traité ya Verdun]]|
+established_dates 	= <br/>- [[843]] |
 mosɔlɔ 	 	= [[Ero]]|currency_code=EUR <small><sup>4</sup></small>|
 ngonga 		= [[Temps universel coordonné|UTC]] |utc_offset=+1 na +2 |
 ngonga_DST	= - | utc_offset_DST=- |
