*Empty MediaWiki Message*

--- a/Lokótá_ya_Nizer-Kongo.mw
+++ b/Lokótá_ya_Nizer-Kongo.mw
@@ -1,1 +1,52 @@
+[[Image:Niger-Congo.png|right|300px|thumb|Répartition des langues nigéro-congolaises]]
+
+Die Familie der '''Nkotá ya Nizer-Kongo''' ist eine der vier anerkannten afrikanischen Sprachfamilien und setzt sich aus folgenden Sprachgruppen zusammen:
+
+* Niger-Kongo
+** [[Nkotá ya ##Atlantique ]]
+** [[Nkotá ya Mande]]
+** [[Nkotá ya Volta-Kongo]]
+*** [[Nkotá ya Benué-Kongo]]
+**** [[Nkotá ya Babantu]]
+*** [[Nkotá ya Kru]]
+*** [[Nkotá ya Kwa]]
+*** [[Nkotá ya Gur]]
+*** [[Nkotá ya Adamawa-Ubangi]]
+*** [[Nkotá ya Dogon]]
+* [[Nkotá ya Kordofan]]
+
+
+Zu den '''Nkotá ya Nizer-Kongo''' gehören:
+* [[Kiswahili]] 
+* [[Shona]] 
+* [[Wolof]] (Senegal) 
+* [[Yoruba]] (Nigeria) 
+* [[Zulu]]
+
+In einigen Klassifikationen wurde die Familie der Niger-Kongo-Sprachen auch als ''Nkotá ya Nizer-Kordofan'' bezeichnet.
+
+
 [[Category:Nkotá ya Afrika]]
+
+
+[[af:Niger-Kongo tale]]
+[[ar:نيجيرية كونغولية]]
+[[br:Yezhoù nigerek-kongoek]]
+[[ca:Llengües nigerocongoleses]]
+[[de:Niger-Kongo-Sprachen]]
+[[en:Niger-Congo languages]]
+[[es:Lenguas níger-congo]]
+[[fa:زبان‌های نیجرکنگو]]
+[[fi:Nigeriläis-kongolaiset kielet]]
+[[fr:Langues nigéro-congolaises]]
+[[hr:Nigersko-kongoanski jezici]]
+[[it:Lingue niger-kordofaniane]]
+[[ko:니제르콩고어족]]
+[[lt:Nigerio-Kongo kalbos]]
+[[nl:Niger-Congotalen]]
+[[nn:Niger-kongo-språk]]
+[[pt:Línguas nigero-congolesas]]
+[[ru:Нигеро-конголезские языки]]
+[[sv:Niger-Kongospråk]]
+[[ta:நைகர்-கொங்கோ மொழிகள்]]
+[[zh:尼日尔-刚果语系]]
