*Empty MediaWiki Message*

--- a/843.mw
+++ b/843.mw
@@ -1,2 +1,6 @@
-== ==
-[[Traité ya Verdun]] (Dipanda ya Falansia)
+==likambo monɛnɛ==
+*[[Traité ya Verdun]] (Dipanda ya Falansia)
+
+==mbotama==
+
+==liwa==
