*Empty MediaWiki Message*

--- a/1939.mw
+++ b/1939.mw
@@ -1,2 +1,8 @@
+==Likambo monɛnɛ==
+
 ==Mbotama==
-27 novembere [[Laurent-Désiré Kabila]] (Mokambi-Ekólo ya [[Kɔ́ngɔ-Kinshasa]])
+*27 novembere [[Laurent-Désiré Kabila]] (Mokambi-Ekólo ya [[Kɔ́ngɔ-Kinshasa]])
+
+==Liwa==
+
+[[category:ya 20 sekulɔ]]
