--- a/2001.mw
+++ b/2001.mw
@@ -1,2 +1,8 @@
-==†==
-16 novembere [[Laurent-Désiré Kabila]] (Mokambi-Ekólo ya [[Kɔ́ngɔ-Kinshasa]])
+==Likambo monɛnɛ==
+
+==Mbotama==
+
+==Liwa==
+*16 novembere [[Laurent-Désiré Kabila]] (Mokambi-Ekólo ya [[Kɔ́ngɔ-Kinshasa]])
+
+[[category:ya 21 sekulɔ]]
