*Empty MediaWiki Message*

--- a/2006.mw
+++ b/2006.mw
@@ -1,8 +1,10 @@
-==Events==
-==Births==
-==Deaths==
+==Likambo monɛnɛ==
 
-[[Category:21th century]]
+==Mbotama==
+
+==Liwa==
+
+[[Category:ya 21 sekulɔ]]
 
 
 [[af:2006]]
