--- a/Lazariste.mw
+++ b/Lazariste.mw
@@ -1,6 +1,6 @@
 [[Image:StVdP.jpg|thumb|Santu Vincent wa Paul]]
 
-'''Congrégation de la Mission (Lazariste)''' ebandi o mobu 1625 o engumba [[Pari]]. Kasi ut'o ebandela, mosala mwa lingomba lina moyebanaki mpe o bikolo bisusu.
+'''Congrégation de la Mission (Lazariste)''' ebandi o mobu [[1625]] o engumba [[Pari]]. Kasi ut'o ebandela, mosala mwa lingomba lina moyebanaki mpe o bikolo bisusu.
 
 Lingomba ya Mission lisangisi ba nganga-[[Nzámbe]] na mpe ba mofulele. Bango batangemi ba ''Religieux'' te, ata ko bakosalaka bilako. Likanisi ya Mosantu [[Vincent wa Paul]] lizalaki 'te akoka kobongisa lingomba lyoko na ntina ya kozala mpe kosala mosala lisanga na bato banso ba mokili. Engebene na mibeko mya Eklezya, bakotanga lyango "société de vie apostolique".
 
