--- a/2005.mw
+++ b/2005.mw
@@ -1,5 +1,6 @@
 ==Likambo monɛnɛ==
 *8 yúli: [[Justine Kitubu Kamanda]] azali bourgemestre ya [[La Gombe (Kinshasa)|La Gombe]].
+*8 yúli: [[Roger Ngamika Mvumu]] azali bourgemestre ya [[Barumbu]].
 
 ==Mbotama==
 
