--- a/Sánzá_(ntángo).mw
+++ b/Sánzá_(ntángo).mw
@@ -7,6 +7,7 @@ Sánzá ezalí [[ntángo]] o [[manáka]], ezalí na [[mokɔlɔ|mikɔlɔ]] ntúku
 [[als:Monat]]
 [[ang:Mōnaþ]]
 [[ar:شهر]]
+[[be:Месяц]]
 [[bg:Месец]]
 [[bs:Mjesec (period)]]
 [[ca:Mes]]
