--- a/1960.mw
+++ b/1960.mw
@@ -1,5 +1,6 @@
 ==Likambo monɛnɛ==
 *30 yúni: [[Kɔ́ngɔ belji]] ekóma [[Republiki ya Kɔ́ngɔ]].
+*1 yúli: [[Joseph Kasa-Vubu]] akóma Mokambi-Ekólo ya [[Republiki ya Kɔ́ngɔ]].
 
 ==Mbotama==
 
