*Empty MediaWiki Message*

--- a/843.mw
+++ b/843.mw
@@ -1,8 +1,11 @@
-==likambo monɛnɛ==
+==Likambo monɛnɛ==
 *[[Traité ya Verdun]] (Dipanda ya Falansia)
 
-==mbotama==
+==Mbotama==
 
-==liwa==
+==Liwa==
 
 [[Category:ya 9 sekulɔ]]
+
+
+[[de:843]]
