*Empty MediaWiki Message*

--- a/2001.mw
+++ b/2001.mw
@@ -3,6 +3,9 @@
 ==Mbotama==
 
 ==Liwa==
-*16 novembere [[Laurent-Désiré Kabila]] (Mokambi-Ekólo ya [[Kɔ́ngɔ-Kinshasa]])
+*16 novembere: [[Laurent-Désiré Kabila]] (Mokambi-Ekólo ya [[Kɔ́ngɔ-Kinshasa]])
 
 [[category:ya 21 sekulɔ]]
+
+
+[[en:2001]]
