--- a/Sánzá_ya_míbalé.mw
+++ b/Sánzá_ya_míbalé.mw
@@ -1,2 +1,4 @@
-{{sánzá}}
+'''Sánza ya míbalé''' ezalí [[sánzá (ntángo)|sánzá]] ya míbalé o [[mánaka]]. Ezalí na [[mokɔlɔ|mikɔlɔ]] ntúku míbalé na mwambe (28) tǒ na mikɔlɔ ntúku míbalé na libwá (29).
+
 {{sánzá ya míbalé}}
+{{sánzá}}
