--- a/Ejipte.mw
+++ b/Ejipte.mw
@@ -49,6 +49,7 @@ Bato na Israel bakómaká baunbu na Ejipte; Nzambe alongolaká bango kuna, na ma
 
 [[Category:Bisé ya Afrika]]
 [[Category:Leta]]
+[[Category:Ejipte]]
 
 [[af:Egipte]]
 [[als:Ägypten]]
