--- a/Pásika.mw
+++ b/Pásika.mw
@@ -1,6 +1,6 @@
 [[Image:Russian Resurrection icon.jpg|thumb|[[Résurection]], icône russe, 16&nbsp;sekulo]]
 
-Mbula na mbula [[Boyúda|Bayúda]] bazlaki kosepela feti ya '''Pake''' po na kokanisa ndenge [[Nzambe]] abimisaká bakoko n abango na [[Ejipte]], esika bazalaká baumbu. [[Yesu]] ayaki na [[Yeruzalemi]] po na feti ya Pake; bongo kaka na mikolo wana nde bakomaki ye. Wango bana [[bokrísto|bakrísto]] basepelaka feti ya Pake po na kokanisa kosekwa ya Yesu.
+Mbula na mbula [[Boyúda|Bayúda]] bazlaki kosepela feti ya '''Pake''' po na kokanisa ndenge [[Nzámbe]] abimisaká bakoko n abango na [[Ejipte]], esika bazalaká baumbu. [[Yesu]] ayaki na [[Yeruzalemi]] po na feti ya Pake; bongo kaka na mikolo wana nde bakomaki ye. Wango bana [[bokrísto|bakrísto]] basepelaka feti ya Pake po na kokanisa kosekwa ya Yesu.
 
 
 {| {{prettytable-R}}
