--- a/1965.mw
+++ b/1965.mw
@@ -3,7 +3,7 @@
 ==Mbotama==
 
 ==Liwa==
-
+* 24 novembere: [[Joseph Kasa-Vubu]], Mokambi-Ekólo ya [[Kɔ́ngɔ-Kinshasa]] ya 1 yuli 1960 na 24 novembere1965
 
 
 [[Category:ya 20 sekulɔ]]
