--- a/1965.mw
+++ b/1965.mw
@@ -4,6 +4,8 @@
 
 ==Liwa==
 * 24 novembere: [[Joseph Kasa-Vubu]], Mokambi-Ekólo ya [[Kɔ́ngɔ-Kinshasa]] ya 1 yuli 1960 na 24 novembere1965
+* [[Mobutu Sese Seko]] akamatákí bokonzi na makási ya [[Kɔ́ngɔ-Kinshasa|Kɔ́ngɔ Demokratiki]].
+
 
 
 [[Category:ya 20 sekulɔ]]
