*Empty MediaWiki Message*

--- a/Pásika.mw
+++ b/Pásika.mw
@@ -5,7 +5,7 @@ Mbula na mbula [[Boyúda|Bayúda]] bazlaki kosepela feti ya '''Pake''' po na kok
 
 {| {{prettytable-R}}
 |-
-|+ Eyenga ya Pake de 2000 à 2030
+|+ '''Eyenga ya Pake ya 2000 na 2030'''
 |- {{highlight}}
 ! xyz !! Églises<br />ya weste !! Églises<br />ya este
 |-
