--- a/1998.mw
+++ b/1998.mw
@@ -3,8 +3,8 @@
 ==Mbotama==
 
 ==Liwa==
-[[Bandundu]] ezala na 5.201.000 hab.
-[[Bas-Congo]] ezala na 2.835.000 hab. 
+*[[Bandundu]] ezala na 5.201.000 hab.
+*[[Bas-Congo]] ezala na 2.835.000 hab. 
 
 [[Category:ya 20 sekulɔ]]
 
