--- a/2003.mw
+++ b/2003.mw
@@ -3,7 +3,9 @@
 ==Mbotama==
 
 ==Liwa==
+* [[Joseph Kabila|Joseph Kabila Kabange]]: [[Mokambi-Ekólo]] ya [[Kɔ́ngɔ-Kinshasa]] ya yanuari [[2001]]; ekelemaki na 2003.
 
+[kobalola] 
 [[Category:ya 21 sekulɔ]]
 
 
