--- a/Kongó-Brazzaville.mw
+++ b/Kongó-Brazzaville.mw
@@ -37,7 +37,7 @@ ngonga 		= [[CET]] |utc_offset=+1 na +2 |
 ngonga_DST	= - | utc_offset_DST=- |
 cctld		= .[[ISO 3166-2:CG|cg]]|
 calling_code	= 242|
-footnotes 	= [[Image:congo republic sm04.png|290px]] Republiki ya Kɔ́ngɔ.|
+footnotes 	= [[image:Congo_Republique_carte.gif|290px]] Republiki ya Kɔ́ngɔ.|
 }}
 '''Republiki ya Kɔ́ngɔ''' tǒ '''Kɔ́ngɔ-Brazzaville''' ezalí [[esé]] ya [[Afríka]] ya [[Mambénga]]. 
 
