*Empty MediaWiki Message*

--- a/Sedre.mw
+++ b/Sedre.mw
@@ -4,6 +4,30 @@
 
 '''Sedre''' ezali [[nzete]] ya monene pe ya molani oyo ezalaka mingi na ngomba [[Liban]].
 
+
+
+
+{| border="1" cellspacing="0"
+|Règne 	
+|Plantae
+|-
+|phylum
+|Pinophyta
+|-
+|classe
+|Pinopsida
+|-
+|ordre 
+|Pinales
+|-
+|famille 
+|Pinaceae
+|-
+|sous-famille 
+| Abietoideae
+|}
+
+
 [[Category:Nzete]]
 [[Category:Liban]]
 
