--- a/Biblíya.mw
+++ b/Biblíya.mw
@@ -20,34 +20,53 @@
 **[[Ezekiele]]
 **[[Emoniseli]]
 
-*'''Kondimana na Sika'''
-**[[Marko]]
-**[[Matai]]
-**[[Luka]]
-**[[Yoane]]
-**[[1 Timote]]
-**[[2 Timote]]
-**[[1 Petelo]]
-**[[2 Petelo]]
-**[[Yakobo]] 
-**[[Bagalatia]]
-**[[Batesaloniki]]
-**[[Baebele]]
-**[[Masese]] 
+*'''Boyokani ya Sika'''
+**[[Sango Malamu ya Matai]]
+**[[Sango Malamu ya Marko]]
+**[[Sango Malamu ya Luka]]
+**[[Sango Malamu ya Yoane]]
+**[[Misala ya Bantoma]]
+**[[Mokanda na Baromén]]
+**[[Mokanda ya libosa na Bakorentien]]
+**[[Mokanda ya mibale na Bakorentien]]
+**[[Mokanda na Bagalate]]
+**[[Mokanda na Baefezien]]
+**[[Mokanda na Bafilipien]]
+**[[Mokanda na Bakolosien]]
+**[[Mokanda ya libosa na Batesaolonisien]]
+**[[Mokanda ya mibale na Batesaolonisien]]
+**[[Mokanda ya libosa na Timoté]]
+**[[Mokanda ya mibale na Timoté]]
+**[[Mokanda na Tite]]
+**[[Mokanda na Filemon]]
+**[[Mokanda na Baebré]]
+**[[Mokanda na Yakobo]]
+**[[Mokanda ya libosa na Petelo]]
+**[[Mokanda ya mibale na Petelo]]
+**[[Mokanda ya libosa na Yoane]]
+**[[Mokanda ya mibale na Yoane]]
+**[[Mokanda ya misato na Yoane]]
+**[[Mokanda na Yuda]]
+**[[Koyebisa Basekele]]
+
 
 ==Tála mpé==
 ===Babúku===
 *Biblíya  	ISBN 9966-843-30-2 ABU 	 	  	
 *Biblíya        ISBN 9966-40-879-7 ABRDC-ABU, 2004
-*Mokanda na Kondimana na Sika na nkolo na biso Yesu Masiya - Njembo     ISBN 9966-40-110-5 SBRDC-ABU, 2000
-*Mokanda na Kondimana na Sika na nkolo na biso Yesu Masiya - Njembo 	ISBN 9966-40-112-1
+*Boyokani ya sika pe banzembo     ISBN 9966-40-110-5 SBRDC-ABU, 2000<ref>Disponible en Europe en 3 à 4 jours; orthographe sans accents «lingala courant»; traduction oecumenique</ref>
+*Mokanda na Kondimana na Sika na nkolo na biso Yesu Masiya - Njembo 	ISBN 9966-40-112-1<ref>ya bamisioni</ref>
+
 
 ===Nkásá o libándá===
 *Bulletin Dei Verbum, BDV 50, p.22 http://www.c-b-f.org/start.php?CONTID=08_01_02_03_01_03_00&LANG=en (lingɛlɛsi)
 *http://www.bibelarchiv-vegelahn.de/bibel_fremdsprachen.html (lialemani)
 *http://www.worldscriptures.org/pages/lingala.html (lingɛlɛsi)
 
+<references/>
+
 [[Category:Boklísto]]
+[[Category:Biblíya]]
 
 [[af:Bybel]]
 [[ar:الكتاب المقدس]]
