*Empty MediaWiki Message*

--- a/Sidá.mw
+++ b/Sidá.mw
@@ -34,3 +34,4 @@ Ntango ya botamboli ya mwasi na mobali: Kaka nde ekanga ekoki [[ekopekisa|kopeki
 
 [[de:Aids]]
 [[fr:Syndrome d'immunodéficience acquise]]
+[[la:SCDI]]
