*Empty MediaWiki Message*

--- a/Lokásá_ya_libosó.mw
+++ b/Lokásá_ya_libosó.mw
@@ -1,8 +1,8 @@
 <div style="position:relative;visibility:hidden">---Sidenote START---</div>
 
-{{Lonkásá ya libosó/Mbɔ́tɛ}}
 {| cellspacing="6px"
 | width="75%" valign="top"|
+{{Lonkásá ya libosó/Mbɔ́tɛ}}<br/>
 {{Encyclopédie}}<br/>
 {{Lonkásá ya libosó/Lokótá}}<br/>
 {{Lonkásá ya libosó/Nkotá ya Wikipedia}}
@@ -15,13 +15,11 @@
 {{Lonkásá ya libosó/Nsango níni}}
 |-
 |
-{{Lonkásá ya libosó/Kosálisa}}
+{{Lonkásá ya libosó/Kosálisa}}<br/>
+{{Lonkásá ya libosó/Special}}
 |}
 |}
 
-<div text-align:center; background-color:#FCFCFC;  padding:0.6ex 2ex;">
-'''«[[Special:Allpages|Allpages]]»''' &nbsp; – &nbsp; [[Special:Categories|ekákoli par catégorie]] &nbsp; – &nbsp; [[Special:Newpages|ekakoli ya sika]] &nbsp; – &nbsp; [[Special:Wantedpages|ekakoli manquants]]  &nbsp; – &nbsp; [[Wikipedia_themes|par thèmes]]</div>
-</div>
 
 
 
@@ -33,6 +31,6 @@
 
 <!-- langues administratifs -- administratif languages -->
 <!-- nl = flamand (Congo Belge) -- nl = flemish (Belgian Congo) -->
-[[ar:]] [[fr:]] [[en:]] [[simple:]] [[es:]] [[fi]] [[nl:]] [[pt:]]
+[[ar:]] [[fr:]] [[en:]] [[simple:]] [[es:]] [[nl:]] [[pt:]]
 
 __NOTOC__
