*Empty MediaWiki Message*

--- a/Wikipedia_themes.mw
+++ b/Wikipedia_themes.mw
@@ -1,83 +1,74 @@
-== A ==
-[[Afrika]]
+===A===
+* [[Category:Afrika|Afrika]]
+===B===
+* [[biléi]]
+===C===
+*
+===D===
+*
+===E===
+*
+===Ɛ===
+*
+===F===
+*
+===G===
+*
+===Gb===
+*
+===H===
+*
+===I===
+* 
+===K===
+* [[Kɔ́ngɔ]]
+* 
+===L===
+*[[lokótá]]
+*
+===M===
+*
+*
+===Mb===
+*[[mbumba]]
+===Mp===
+*[[mpoto]]
+===N===
+*
+===Nd===
+*[[ndunda]]
+===Ng===
+*
+===Nk===
+*
+===Ns===
+*
+===Nt===
+*
+===Ny===
+*[[nyama]]
+===Nz===
+*
+===O===
+* 
+* 
+===Ɔ===
+*
+===P===
+*
+===R===
+*[[Category:Relijió|Relijió]]
+===S===
+* 
+===T===
+===U===
+===V===
+===W===
+===Y===
+===Z===
+*[[Zamba]]
 
 
-== B ==
-[[biléi]]
 
-C
-
-
-D
-
-== E ==
-
-
-F
-
-
-G
-
-
-H
-
-
-I
-
-
-J
-
-
-K
-
-
-
-== L ==
-[[lokótá]]
-
-== M ==
-[[mbumba]]
-[[mpoto]]
-
-
-== N ==
-[[ndunda]]
-[[nyama]]
-
-
-O
-
-
-P
-
-
-Q
-
-
-R
-
-
-S
-
-
-T
-
-
-U
-
-
-V
-
-
-W
-
-
-X
-
-
-Y
-
-== Z ==
-[[Zamba]]
 
 [[Category:Wikipedia]]
