--- a/Wikipedia_themes.mw
+++ b/Wikipedia_themes.mw
@@ -2,7 +2,7 @@ __NOTOC__
 {{abc}}
 
 ===A===
-* [[Category:Afrika|Afrika]]
+* [[:Category:Afrika|Afrika]]
 ===B===
 * [[biléi]]
 ===C===
@@ -60,7 +60,7 @@ __NOTOC__
 ===P===
 *
 ===R===
-*[[Category:Relijió|Relijió]]
+*[[:Category:Relijió|Relijió]]
 ===S===
 * 
 ===T===
