--- a/Limeté.mw
+++ b/Limeté.mw
@@ -26,3 +26,5 @@ ProvIII=[[Kinshasa (province Constitution 2005)|Kinsásá]]
 {{CommunesKinshasa}}
 
 [[Category:Bakomini ya Kinshasa]]
+
+[[fr:Limete]]
