--- a/Ngaliéma.mw
+++ b/Ngaliéma.mw
@@ -4,10 +4,10 @@ nom=Commune de Ngaliema|
 ville=[[Kinshasa]]|
 bourgmestre=[[Charles Mwanandeke|M. Mwanandeke]]|
 lg=[[Lingála]]|
-supkm2=?|
-pop= ?|
-annéepop= [[?]]|
-densité= ?|
+supkm2= 22 430 ha|
+pop= 682 135 hab.|
+annéepop= [[2004]] est.|
+densité= 3 041,17 hab./km²|
 ProvII=[[Kinshasa|Kinshasa]]|
 ProvIII=[[Kinshasa (province Constitution 2005)|Kinshasa]]
 }}
