*Empty MediaWiki Message*

--- a/Mont_Ngafúla.mw
+++ b/Mont_Ngafúla.mw
@@ -3,10 +3,10 @@ nom=Mont Ngafula|
 ville=[[Kinsásá]]|
 bourgmestre=M. [[Camile Masumu Mwanda]]|
 lg=[[Lingála]]|
-supkm2=? |
-pop= ? |
-annéepop= [[1995]]|
-densité= ?|
+supkm2= 35 892 ha |
+pop= 261 004 hab. |
+annéepop= [[2004]] est.|
+densité= 727,19 hab./km²|
 ProvII=[[Kinsásá ]]|
 ProvIII=[[Kinshasa (province Constitution 2005)|Kinsásá]]
 }}
