*Empty MediaWiki Message*

--- a/Gombe_(Kinsásá).mw
+++ b/Gombe_(Kinsásá).mw
@@ -3,10 +3,10 @@ nom=Commune La Gombe|
 ville=[[Kinshasa]]|
 bourgmestre=Mme [[Justine Kitubu Kamanda]]|
 lg=[[Lingála]]|
-supkm2=? |
-pop= ? |
-annéepop= [[1995]]|
-densité= ?|
+supkm2= 2 933 ha |
+pop= 32 373 hab. |
+annéepop= [[2004]] est.|
+densité= 1 103,75 hab./km²|
 ProvII=[[Kinshasa|Kinshasa]]|
 ProvIII=[[Kinshasa (province Constitution 2005)|Kinshasa]]
 }}
