*Empty MediaWiki Message*

--- a/Bɛ́ljika.mw
+++ b/Bɛ́ljika.mw
@@ -1,4 +1,9 @@
 [[Bɛ́ljika]] ezalí esé o ntéi ya [[Erópa]].
 
+{{Template:Bisé ya Eropa}}
 
 [[Category:Bisé ya Eropa]]
+
+[[als:Belgien]]
+[[de:Belgien]]
+[[en:Belgium]]
