*Empty MediaWiki Message*

--- a/Pápa_Benwa_XVI.mw
+++ b/Pápa_Benwa_XVI.mw
@@ -1,21 +1,22 @@
-{{delete}}
+'''Benwa XVI''' ([[Latin]]: ''Benedictus PP. XVI''; born [[16 aprili]], [[1927]] as '''Joseph Alois Ratzinger''') ezaláí [[Mokambi-Ekólo]] ya [[Vatikani]] na [[Pápa]] ya [[Eklezya ya bakatolike]] na [[19 aprili]] [[2005]]
+
 {{bobóngoli na nkóta}}
 {{Infobox Pope |
-  English name = Benedict XVI|
+  Lingala name = Benwa XVI|
   image = [[Image:Popebenedictxvi firsttimeonthrone.jpg|200px|]]|
   birth_name = Joseph Alois Ratzinger|
-  term_start = [[April 19]], [[2005]]|
-  term_end = ''[[Incumbent]]''|
+  term_start = [[19 aprili]], [[2005]]|
+  term_end = |
   predecessor = [[Pope John Paul II|John Paul II]]|
-  successor = ''[[Incumbent]]''|
-  birth_date = [[April 16]], [[1927]]|
-  birthplace = [[Marktl am Inn]], [[Bavaria]], [[Germany]]|
+  successor = |
+  birth_date = [[16 Aprili]], [[1927]]|
+  birthplace = [[Marktl am Inn]], [[Bavière]], [[Alémani]]|
   dead = alive|
   death_date = |
   deathplace = |
 }}
 
-[[hsb:Benedikt XVI.]]
+[[Category:Pápa]]
 
 [[af:Pous Benedictus XVI]]
 [[ar:بينيدكت السادس عشر]]
@@ -44,6 +45,7 @@
 [[he:בנדיקטוס השישה עשר]]
 [[hi:जोज़फ़ रैत्सिंगर]]
 [[hr:Benedikt XVI.]]
+[[hsb:Benedikt XVI.]]
 [[hu:XVI. Benedek pápa]]
 [[id:Paus Benediktus XVI]]
 [[ilo:Papa Benedicto XVI]]
