--- a/Lazariste.mw
+++ b/Lazariste.mw
@@ -113,6 +113,7 @@ Maison "ad instar domus" Ba Lazariste ba Liège bavandi esika yoko te, kasi baza
 |}
 [[category:relijió]]
 [[category:boklísto]]
+[[Category:Katolike]]
 
 [[de:Lazaristen]]
 [[en:Lazarists]]
