/* Mankasa olibanda Wikipedia */

--- a/Vincent_wa_Paul.mw
+++ b/Vincent_wa_Paul.mw
@@ -26,6 +26,7 @@ Apesi babola lokumu (bazali "bankumu mpe bakonzi ba biso"), asikoli bomoi bwa ba
 |}
 [[category:relijió]]
 [[category:boklísto]]
+[[Category:Katolike]]
 
 [[de:Vinzenz von Paul]]
 [[en:Vincent de Paul]]
