*Empty MediaWiki Message*

--- a/Pápa_Benwa_XVI.mw
+++ b/Pápa_Benwa_XVI.mw
@@ -1,19 +1,19 @@
 '''Benwa XVI''' ([[Latin]]: ''Benedictus PP. XVI''; born [[16 aprili]], [[1927]] as '''Joseph Alois Ratzinger''') ezaláí [[Mokambi-Ekólo]] ya [[Vatikani]] na [[Pápa]] ya [[Eklezya ya bakatolike]] na [[19 aprili]] [[2005]]
 
 {{bobóngoli na nkóta}}
-{{Infobox Pope |
+{{Infobox Pápa |
   Lingala name = Benwa XVI|
-  image = [[Image:Popebenedictxvi firsttimeonthrone.jpg|200px|]]|
-  birth_name = Joseph Alois Ratzinger|
+  ililingi = [[Image:Popebenedictxvi firsttimeonthrone.jpg|200px|]]|
+  abótámi_name = Joseph Alois Ratzinger|
   term_start = [[19 aprili]], [[2005]]|
   term_end = |
-  predecessor = [[Pope John Paul II|John Paul II]]|
-  successor = |
-  birth_date = [[16 Aprili]], [[1927]]|
-  birthplace = [[Marktl am Inn]], [[Bavière]], [[Alémani]]|
-  dead = alive|
-  death_date = |
-  deathplace = |
+  predecesseur = [[Pope John Paul II|John Paul II]]|
+  successeur = |
+  abótámi_date = [[16 Aprili]], [[1927]]|
+  abótámi place = [[Marktl am Inn]], [[Bavière]], [[Alémani]]|
+  akúfí = |
+  akúfí_date = |
+  akúfí place = |
 }}
 
 [[Category:Pápa]]
