--- a/Pápa_Benwa_XVI.mw
+++ b/Pápa_Benwa_XVI.mw
@@ -2,18 +2,16 @@
 
 {{bobóngoli na nkóta}}
 {{Infobox Pápa |
-  Lingala name = Benwa XVI|
-  ililingi = [[Image:Popebenedictxvi firsttimeonthrone.jpg|200px|]]|
-  abótámi_name = Joseph Alois Ratzinger|
-  term_start = [[19 aprili]], [[2005]]|
-  term_end = |
-  predecesseur = [[Pope John Paul II|John Paul II]]|
-  successeur = |
-  abótámi_date = [[16 Aprili]], [[1927]]|
-  abótámi place = [[Marktl am Inn]], [[Bavière]], [[Alémani]]|
-  akúfí = |
-  akúfí_date = |
-  akúfí place = |
+  Nkombo lingála = Benwa XVI|
+  image = [[Image:Pope Benedictus XVI january,20 2006 (2) mod.jpg|200px]]|
+  Nkombo ya mbotama = Joseph Alois Ratzinger|
+  *Pápacy&nbsp;kobanda = [[19 aprili]] [[2005]]|
+  *Pápacy&nbsp;nsuka = —|
+  *Predecesseur = [[Pápa Jean Paul II|Jean Paul II]]|
+  *Successeur = —|
+  Ɛlaka ya mbotama = [[16 Aprili]] [[1927]]|
+  Mokili = [[Alémani]]|
+  Ɛlaka ya liwa = —|
 }}
 
 [[Category:Pápa]]
