--- a/2005.mw
+++ b/2005.mw
@@ -1,4 +1,5 @@
 ==Likambo monɛnɛ==
+*19 aprili: Joseph Alois Ratzinger azali [[Pápa Benwa XVI]] na [[Eklesia katolike]].
 *8 yúli: [[Justine Kitubu Kamanda]] azali bourgemestre ya [[La Gombe (Kinshasa)|La Gombe]].
 *8 yúli: [[Roger Ngamika Mvumu]] azali bourgemestre ya [[Barumbu]].
 
