--- a/1961.mw
+++ b/1961.mw
@@ -1,14 +1,13 @@
 ==Likambo monɛnɛ==
 *
 
-==Mbotama==
+==Mbótama==
 *  
 
-==Liwa==
+==Liwâ==
 * 17 novɛ́mbɛ: [[Patrice Lumumba|Patrice Émery Lumumba]], Moyángeli mwa yambo ya Bulamatari o [[Kɔ́ngɔ-Kinshasa]].
 
 [[Category:ya 20 sekulɔ]]
-
 
 [[de:1961]]
 [[en:1961]]
