sanza ya mɔ̌kɔ́

--- a/1961.mw
+++ b/1961.mw
@@ -5,7 +5,7 @@
 *  
 
 ==Liwâ==
-* 17 novɛ́mbɛ: [[Patrice Lumumba|Patrice Émery Lumumba]], Moyángeli mwa yambo ya Bulamatari o [[Kɔ́ngɔ-Kinshasa]].
+* [[17 ya sanza ya mɔ̌kɔ́]]: [[Patrice Lumumba|Patrice Émery Lumumba]], Moyángeli mwa yambo ya Bulamatari o [[Kɔ́ngɔ-Kinshasa]].
 
 [[Category:ya 20 sekulɔ]]
 
