*Empty MediaWiki Message*

--- a/1581.mw
+++ b/1581.mw
@@ -4,7 +4,7 @@
 ==Mbótama==
 * [[Vincent wa Paul]] o Pouy, [[Falansia]]. Tala mpé [[Lazariste]].
 
-==Liwa==
+==Liwâ==
 
 [[Category:ya 16 sekulɔ]]
 
