--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -232,7 +232,7 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 * [[1997]] - [[2001]] [[Laurent-Désiré Kabila]]
 * [[2001]] - lɛlɔ́. [[Joseph Kabila]]
 
-'''Bakambi Bulamatari''' :
+'''Bakambi Lɛ́ta :
 * [[1960]] - 1960     [[Patrice Lumumba]]
 * [[1961]] - 1961     [[Joseph Iléo]]
 * [[1961]] - [[1964]] [[Cyrille Adoula]]
