*Empty MediaWiki Message*

--- a/Pápa_Benwa_XVI.mw
+++ b/Pápa_Benwa_XVI.mw
@@ -1,18 +1,16 @@
-'''Benwa XVI''' ([[Latin]]: ''Benedictus PP. XVI''; born [[16 aprili]], [[1927]] as '''Joseph Alois Ratzinger''') ezaláí [[Mokambi-Ekólo]] ya [[Vatikani]] na [[Pápa]] ya [[Eklezya ya bakatolike]] na [[19 aprili]] [[2005]]
-
-{{bobóngoli na nkóta}}
 {{Infobox Pápa |
-  Nkombo lingála = Benwa XVI|
+  Nkómbó lingála = Benwa XVI|
   image = [[Image:Pope Benedictus XVI january,20 2006 (2) mod.jpg|200px]]|
-  Nkombo ya mbotama = Joseph Alois Ratzinger|
+  Nkómbó ya mbótama = Joseph Alois Ratzinger|
   *Pápacy&nbsp;kobanda = [[19 aprili]] [[2005]]|
   *Pápacy&nbsp;nsuka = —|
   *Predecesseur = [[Pápa Jean Paul II|Jean Paul II]]|
   *Successeur = —|
-  Ɛlaka ya mbotama = [[16 Aprili]] [[1927]]|
-  Mokili = [[Alémani]]|
-  Ɛlaka ya liwa = —|
+  Elaká ya mbótama = [[16 Aprili]] [[1927]]|
+  Ekólo = [[Alémani]]|
+  Elaká ya liwâ = —|
 }}
+'''Benwa XVI''' ([[Latin]]: ''Benedictus PP. XVI''; abótámi o [[mokɔlɔ 16 ya sánzá ya ínéi]], [[1927]] nkómbó '''Joseph Alois Ratzinger''') ezalí [[Mokambi-Ekólo]] ya [[Vatikani]] na [[Pápa]] ya [[Eklezya ya bakatolike]] na [[19 ya sánzá ya ínéi]] [[2005]].
 
 [[Category:Pápa]]
 
