*Empty MediaWiki Message*

--- a/Pápa_Benwa_XVI.mw
+++ b/Pápa_Benwa_XVI.mw
@@ -3,9 +3,9 @@
   image = [[Image:Pope Benedictus XVI january,20 2006 (2) mod.jpg|200px]]|
   Nkómbó ya mbótama = Joseph Alois Ratzinger|
   *Pápacy&nbsp;kobanda = [[19 aprili]] [[2005]]|
-  *Pápacy&nbsp;nsuka = —|
+  *Pápacy&nbsp;nsúka = —|
   *Predecesseur = [[Pápa Jean Paul II|Jean Paul II]]|
-  *Successeur = —|
+  mokitani = —|
   Elaká ya mbótama = [[16 Aprili]] [[1927]]|
   Ekólo = [[Alémani]]|
   Elaká ya liwâ = —|
