--- a/Kongó-Brazzaville.mw
+++ b/Kongó-Brazzaville.mw
@@ -42,7 +42,7 @@ footnotes 	= [[image:Congo_Republique_carte.gif|290px]] Republiki ya Kɔ́ngɔ.|
 '''Republiki ya Kɔ́ngɔ''' tǒ '''Kɔ́ngɔ-Brazzaville''' ezalí [[esé]] ya [[Afríka]] ya [[Mambénga]]. 
 
 == Lokótá ==
-Na Kɔ́ngɔ balobamí nkótá boyíke. [[Falansé]] mpé [[lingála]] izalí nkótá ya lɛ́ta.
+Na Kɔ́ngɔ balobamí nkótá boyíke. [[Falansé]], kikɔ́ngɔ mpé [[lingála]] izalí nkótá ya lɛ́ta.
 
 ==Likambo ==
 ==Bato ==
