*Empty MediaWiki Message*

--- a/Pápa_Benwa_XVI.mw
+++ b/Pápa_Benwa_XVI.mw
@@ -2,8 +2,8 @@
   Nkómbó lingála = Benwa XVI|
   image = [[Image:Pope Benedictus XVI january,20 2006 (2) mod.jpg|200px]]|
   Nkómbó ya mbótama = Joseph Alois Ratzinger|
-  *Pápacy&nbsp;kobanda = [[19 aprili]] [[2005]]|
-  *Pápacy&nbsp;nsúka = —|
+  Pápa bandá = [[19 aprili]] [[2005]]|
+  nsúka = —|
   *Predecesseur = [[Pápa Jean Paul II|Jean Paul II]]|
   mokitani = —|
   Elaká ya mbótama = [[16 Aprili]] [[1927]]|
