*Empty MediaWiki Message*

--- a/Bɛ́ljika.mw
+++ b/Bɛ́ljika.mw
@@ -4,6 +4,110 @@
 
 [[Category:Bisé ya Eropa]]
 
+[[af:België]]
 [[als:Belgien]]
+[[ang:Belgium]]
+[[ar:بلجيكا]]
+[[arc:ܒܠܓܝܟܐ]]
+[[an:Belchica]]
+[[roa-rup:Belghia]]
+[[frp:Bèlg·ique]]
+[[ast:Bélxica]]
+[[bar:Belgien]]
+[[id:Belgia]]
+[[ms:Belgium]]
+[[bn:বেলজিয়াম]]
+[[zh-min-nan:Belgien]]
+[[jv:Belgia]]
+[[be:Бэльгія]]
+[[bs:Belgija]]
+[[br:Belgia]]
+[[bg:Белгия]]
+[[ca:Bèlgica]]
+[[cv:Бельги]]
+[[cs:Belgie]]
+[[cy:Gwlad Belg]]
+[[da:Belgien]]
 [[de:Belgien]]
+[[et:Belgia]]
+[[na:Belgium]]
+[[el:Βέλγιο]]
 [[en:Belgium]]
+[[es:Bélgica]]
+[[eo:Belgio]]
+[[eu:Belgika]]
+[[fa:بلژیک]]
+[[fr:Belgique]]
+[[fy:Belgje]]
+[[fur:Belgjo]]
+[[ga:An Bheilg]]
+[[gv:Yn Velg]]
+[[gd:A' Bheilg]]
+[[gl:Bélxica - België]]
+[[ko:벨기에]]
+[[hy:Բելգիա]]
+[[hr:Belgija]]
+[[io:Belgia]]
+[[ilo:Belgium]]
+[[ia:Belgica]]
+[[os:Бельги]]
+[[is:Belgía]]
+[[it:Belgio]]
+[[he:בלגיה]]
+[[ka:ბელგია]]
+[[kw:Pow Belg]]
+[[ht:Bèljik]]
+[[ku:Belçîka]]
+[[la:Belgia]]
+[[lv:Beļģija]]
+[[lb:Belsch]]
+[[lt:Belgija]]
+[[li:Belsj]]
+[[jbo:gugdrbelgi]]
+[[hu:Belgium]]
+[[mk:Белгија]]
+[[mr:बेल्जियम]]
+[[nl:België]]
+[[nds-nl:België]]
+[[ne:बेल्जियम]]
+[[ja:ベルギー]]
+[[no:Belgia]]
+[[nn:Belgia]]
+[[nrm:Belgique]]
+[[nov:Belgia]]
+[[oc:Belgica]]
+[[pam:Belgium]]
+[[ps:بلجيم]]
+[[pms:Belgio]]
+[[nds:Belgien]]
+[[pl:Belgia]]
+[[pt:Bélgica]]
+[[ro:Belgia]]
+[[rm:Belgia]]
+[[qu:Bilhika]]
+[[ru:Бельгия]]
+[[se:Belgia]]
+[[sa:बेल्जियम]]
+[[sq:Belgjika]]
+[[scn:Belgiu]]
+[[simple:Belgium]]
+[[sk:Belgicko]]
+[[sl:Belgija]]
+[[sr:Белгија]]
+[[sh:Belgija]]
+[[fi:Belgia]]
+[[sv:Belgien]]
+[[tl:Belhika]]
+[[ta:பெல்ஜியம்]]
+[[tet:Béljika]]
+[[th:ประเทศเบลเยียม]]
+[[vi:Bỉ]]
+[[tg:Белгия]]
+[[tpi:Belsum]]
+[[tr:Belçika]]
+[[uk:Бельґія]]
+[[fiu-vro:Belgiä]]
+[[wa:Beldjike]]
+[[vls:Belgje]]
+[[zh-yue:比利時]]
+[[zh:比利时]]
