cat nyama ya mabɛ́lɛ

--- a/Nzɔku.mw
+++ b/Nzɔku.mw
@@ -1,9 +1,9 @@
 {{ndámbo}}
 [[image:Lightmatter_elephanttrunk.jpg|thumb|180px|right|Nzoku]]
+'''Nzoku''' ezalí [[nyama ya mabɛ́lɛ]] ya [[Afríka]].
 
 
-
-[[Category:Nyama]]
+[[Category:Nyama ya mabɛ́lɛ]]
 
 [[af:Olifant]]
 [[ast:Elefante]]
