cat nyama ya mabɛ́lɛ

--- a/Nkɔ́si.mw
+++ b/Nkɔ́si.mw
@@ -3,9 +3,9 @@
 [[image:Loewe-painting.jpg|thumb|180px|right|Kenia; in: Brehms Tierleben, 1927]]
 [[image:Lightmatter_lioness.jpg|thumb|180px|right|Nkosi]]
 
-'''Nkosi''' ezali [[nyama]] ya [[esóbé]].
+'''Nkosi''' ezalí [[nyama ya mabɛ́lɛ]] ya [[esóbé]] ya [[Afríka]].
 
-[[Category:Nyama]]
+[[Category:Nyama ya mabɛ́lɛ]]
 
 [[bg:Лъв]]
 [[ca:Lleó]]
