better image version

--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -284,7 +284,7 @@ __NOTOC__
 |-
 | [[Federated States of Micronesia]] || [[Image:Micronesie_COA.gif|120px|Micronesia COA]]
 |-
-| [[Moldova]] || [[Image:Mda_coa.gif|120px|Moldova Coat of Arms]]
+| [[Moldova]] || [[Image:Coat of arms of Moldova.png|120px|Moldova Coat of Arms]]
 |-
 | [[Monaco]] || [[Image:Monaco_coa.png|120px]]
 |-
