*Empty MediaWiki Message*

--- a/Bandundu.mw
+++ b/Bandundu.mw
@@ -11,7 +11,7 @@ densité=17,59|
 ISO=CD-BN|
 dep=48|
 }}
-'''Bandundu''' ezalí [[etúká]] ya ekólo [[Kɔ́ngɔ-Kinshasa]].
+'''Etúká ya Bandundu''' ezalí [[etúká]] ya ekólo [[Kɔ́ngɔ-Kinshasa]].
 
 
 {{BiteniKongoKinshasa}}
