*Empty MediaWiki Message*

--- a/Kisangáni.mw
+++ b/Kisangáni.mw
@@ -1,3 +1,5 @@
 {{ndámbo}}
+'''Kisangani''' ezalí mbóka ya [[Kɔ́ngɔ-Kinsásá]], mpé mbóka-mokonzi ya Etúká [[Orientale]].
+
 [[Category:Bingumba bya Kɔ́ngɔ-Kinshasa]]
 [[Category:Bingumba bya Afrika]]
