*Empty MediaWiki Message*

--- a/Berlin.mw
+++ b/Berlin.mw
@@ -1,7 +1,7 @@
 [[Image:Coat of arms of Berlin.svg|thumb|right|Almwali ya Berlin]]
 Mbóka tô engúmba '''Berlin''' (/paˈʀi/, ''Berlin'' na lokóta ya [[Lialémani]]) ezali [[mbóka-mokonzi]] ya [[Alémani]]. Ezali engúmba monɛ́nɛ, na milioni 3.4 ya bato (2005).
 
-{commons|Berlin}
+{{Commons|Berlin}}
 
 
 [[Category:Ndámbo]]
