*Empty MediaWiki Message*

--- a/Berlin.mw
+++ b/Berlin.mw
@@ -76,10 +76,10 @@ Mbóka tô engúmba '''Berlin''' (/paˈʀi/, ''Berlin'' na lokóta ya [[Lialéma
 [[scn:Birlinu]]
 [[sh:Berlin]]
 [[simple:Berlin]]
-[[sk:Berlín]]{{Link FA|sk}}
+[[sk:Berlín]]
 [[sl:Berlin]]
 [[sq:Berlini]]
-[[sr:Берлин]]{{Link FA|sr}}
+[[sr:Берлин]]
 [[sv:Berlin]]
 [[ta:பெர்லின்]]
 [[th:เบอร์ลิน]]
