*Empty MediaWiki Message*

--- a/Sánzá_ya_mísáto.mw
+++ b/Sánzá_ya_mísáto.mw
@@ -1,2 +1,6 @@
-{{sánzá}}
 {{sánzá ya mísáto}}
+'''Sánza ya mísáto''', tǒ ''mars'' ezalí [[sánzá (ntángo)|sánzá]] ya mísáto o [[manáka]]. Ezalí na [[mokɔlɔ|mikɔlɔ]] ntúku misáto na mɔ̌kɔ́ (31).
+
+{{sánzá}}
+[[en:Mars]]
+[[fr:mars]]
