*Empty MediaWiki Message*

--- a/Sánzá_ya_mínei.mw
+++ b/Sánzá_ya_mínei.mw
@@ -1,2 +1,6 @@
-{{sánzá}}
 {{Sánzá ya mínei}}
+'''Sánza ya mínei''', tǒ ''apríli'' ezalí [[sánzá (ntángo)|sánzá]] ya mínei o [[manáka]]. Ezalí na [[mokɔlɔ|mikɔlɔ]] ntúku misáto (30).
+
+{{sánzá}}
+[[en:April]]
+[[fr:avril]]
