*Empty MediaWiki Message*

--- a/Sánzá_ya_mítáno.mw
+++ b/Sánzá_ya_mítáno.mw
@@ -1,2 +1,6 @@
-{{sánzá}}
 {{sánzá ya mítáno}}
+'''Sánza ya mítáno''' ezalí [[sánzá (ntángo)|sánzá]] ya mítáno o [[manáka]]. Ezalí na [[mokɔlɔ|mikɔlɔ]] ntúku misáto na mɔ̌kɔ́ (31).
+
+{{sánzá}}
+[[en:May]]
+[[fr:mai]]
