*Empty MediaWiki Message*

--- a/Sánzá_ya_nsambo.mw
+++ b/Sánzá_ya_nsambo.mw
@@ -1,2 +1,6 @@
-{{sánzá}}
 {{sánzá ya nsambo}}
+'''Sánza ya mítáno''' tǒ '''yuli''' ezalí [[sánzá (ntángo)|sánzá]] ya nsambo o [[manáka]]. Ezalí na [[mokɔlɔ|mikɔlɔ]] ntúku misáto na mɔ̌kɔ́ (31).
+
+{{sánzá}}
+[[en:July]]
+[[fr:juillet]]
